--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^2.6.5",
+    "particle.js": "^1.0.7",
     "vue": "^2.6.10",
     "vue-fontawesome": "0.0.2",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
