--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "start": "nodemon --exec babel-node ./src/index.js",
-    "test": "mocha 'test/unit/*/*.js' --require node_modules/@babel/register node_modules/@vue/test-utils --recursive --reporter mocha-junit-reporter --timeout 60000 --exit"
+    "test": "mocha 'test/unit/tests/**/*.js' --require node_modules/@babel/register  --recursive"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
@@ -20,18 +20,18 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^2.6.5",
-    "mocha-promise-me": "^1.0.1",
     "particle.js": "^1.0.7",
     "vue": "^2.6.10",
     "vue-fontawesome": "0.0.2",
     "vue-particles": "^1.0.9",
-    "vue-router": "^3.0.3",
+    "vue-router": "^3.3.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
     "@babel/node": "^7.10.1",
+    "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
     "@babel/register": "^7.10.1",
     "@babel/runtime": "^7.10.2",
@@ -46,15 +46,19 @@
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
+    "compression-webpack-plugin": "^4.0.0",
     "cypress": "^4.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "inject-loader": "^4.0.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^7.2.0",
     "mocha-junit-reporter": "^1.23.3",
     "node-sass": "^4.12.0",
     "nodemon": "^2.0.4",
     "sass-loader": "^8.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuelidate": "^0.7.5",
+    "vuex-persistedstate": "^3.0.1"
   }
 }
