--- a/.env
+++ b/.env
@@ -1,2 +1,12 @@
-VUE_APP_TEST_SERVER_ROOT=http://172.16.5.240/rosp/api
-# VUE_APP_TEST_SERVER_ROOT=localhost
+VUE_APP_TEST_LOCAL_SERVER_ROOT=http://172.16.5.240/rosp/api
+VUE_APP_TEST_LOCAL_SERVER_PROXY_ROOT=/local
+VUE_APP_TEST_REMOTE_SERVER_ROOT=http://219.133.104.156:16888/rosp/api
+VUE_APP_TEST_REMOTE_SERVER_PROXY_ROOT=/remote
+VUE_APP_TEST_SERVER_ROOT=/remote
+VUE_APP_SMS_SERVER_ROOT=http://localhost:5000
+VUE_APP_SESS_ENCRPYTION_KEY=eShVmYq3t6w9z$C&F)J@NcRfTjWnZr4u7x!A%D*G-KaPdSgVkXp2s5v8y/B?E(H+MbQeThWmZq3t6w9z$C&F)J@NcRfUjXn2r5u8x!A%D*G-KaPdSgVkYp3s6v9y$B?E
+VUE_APP_TEST_APP_ID=2020
+VUE_APP_TEST_APP_SECRET=123456
+VUE_APP_PRODUCTION_APP_ID=2020
+VUE_APP_PRODUCTION_APP_SECRET=123456
+VUE_APP_AUTO_REFRESH_SECONDS=840000
