project is deprecated use the code for the future

--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ VUE_APP_TEST_APP_SECRET=123456
 VUE_APP_PRODUCTION_APP_ID=2020
 VUE_APP_PRODUCTION_APP_SECRET=123456
 VUE_APP_AUTO_REFRESH_SECONDS=840000
+VUE_APP_TEST_EN_JOB_FAIR_ID=7B11BBCB404D35A6
