--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "core-js": "^2.6.5",
+    "node-rsa": "^1.0.8",
     "particle.js": "^1.0.7",
     "vue": "^2.6.10",
+    "vue-axios": "^2.1.5",
     "vue-fontawesome": "0.0.2",
     "vue-particles": "^1.0.9",
     "vue-router": "^3.3.2",
@@ -47,16 +50,21 @@
     "babel-register": "^6.26.0",
     "chai": "^4.2.0",
     "compression-webpack-plugin": "^4.0.0",
+    "crypto-js": "^4.0.0",
     "cypress": "^4.7.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "http-proxy-middleware": "^1.0.4",
     "inject-loader": "^4.0.1",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^7.2.0",
     "mocha-junit-reporter": "^1.23.3",
     "node-sass": "^4.12.0",
     "nodemon": "^2.0.4",
     "sass-loader": "^8.0.0",
+    "secure-ls": "^1.2.6",
+    "vue-cryptojs": "^2.1.4",
     "vue-template-compiler": "^2.6.10",
     "vuelidate": "^0.7.5",
     "vuex-persistedstate": "^3.0.1"
